<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SinaWeibo</string>
    <string name="action_settings">Settings</string>
    <string name="version">Ver 1.0</string>
    <string name="mysina">新浪微博</string>
    <string name="login">正在载入请稍候...</string>
    <string name="author">作者：小白</string>
    <string name="email">bairutai@aliyun.com</string>
    <string name="weibosdk_demo_obtain_token_via_sso_all_in_one">SSO 授权（ALL IN ONE）</string>
    <string name="weibosdk_demo_obtain_token_via_web">SSO 授权（Web）</string>
    <string name="weibosdk_demo_obtain_token_via_sso">SSO 授权（仅客户端）</string>
    <string name="weibosdk_demo_obtain_token_via_signature">Web 授权</string>
    <string name="weibosdk_demo_obtain_token_via_quick_sso">通过微博客户端快速授权</string>
    <string name="weibosdk_demo_obtain_token_logout">用户登出</string>
    <string name="weibosdk_demo_token_info">Token 信息：</string>
    <string name="weibosdk_demo_token_has_existed">Token 仍在有效期内，无需再次登录。</string>
    <string name="weibosdk_demo_obtain_token_hint"><b>请注意：</b>\n<li>SSO 登录需要微博客户端的支持，目前仅 3.0.0 及以上微博客户端版本支持 SSO；如果未安装，将自动转为 Oauth2.0 Web 授权认证（即第一种认证方式）</li>\n<li>如果您通过方式一和方式二获取不到 Token，而是获取到 code，那说明您的包名和签名存在问题，请到开放平台注册包名和签名。详情请查看 FAQ 文档</li></string>
    <string name="weibosdk_demo_obtain_token_via_sso_hint">使用 SSO 登录前，请检查手机上是否已经安装新浪微博客户端，目前仅 3.0.0 及以上微博客户端版本支持 SSO；如果未安装，将自动转为 Oauth2.0 进行认证。</string>
    <string name="weibosdk_demo_obtain_token_via_code_hint"><b>请注意：</b>基于以下几点原因，您可能不想使用前面的两种授权方式：\n<li>出于安全性的考虑，您不信任目前使用应用的包名和签名来获取 Token 的方式</li>\n<li>您不想安装微博客户端</li>\n您可以自行通过 Code 来获取 Token。通过这种方式需要使用到 APP_SECRET，请务必妥善保管好自己的 APP_SECRET，<b>不要直接暴露在程序中，泄露有风险</b>。\n<b>更多细节请查看：</b><a href="http://open.weibo.com/wiki/%E6%8E%88%E6%9D%83%E6%9C%BA%E5%88%B6%E8%AF%B4%E6%98%8E#Web.E5.BA.94.E7.94.A8.E7.9A.84.E9.AA.8C.E8.AF.81.E6.8E.88.E6.9D.83">验证授权步骤</a></string>
    <string name="weibosdk_demo_step_to_obtain_code">第一步：获取 Code</string>
    <string name="weibosdk_demo_step_to_obtain_token">第二步：通过 Code 获取 Token</string>
    <string name="weibosdk_demo_code_text_hint">第一步获取到的 Code：（一次性有效）</string>
    <string name="weibosdk_demo_token_text_hint">第二步获取到的 Token：</string>
    <string name="weibosdk_demo_token_to_string_format">Token：%1$s \nRefresh Token：%2$s \nexpires_in：%3$s</string>
    <string name="weibosdk_demo_token_to_string_format_1">Token：%1$s \n有效期：%2$s</string>
    <string name="weibosdk_demo_toast_auth_success">授权成功</string>
    <string name="weibosdk_demo_toast_auth_failed">授权失败</string>
    <string name="weibosdk_demo_toast_auth_canceled">取消授权</string>
    <string name="weibosdk_demo_toast_obtain_code_success">获取 Code 成功</string>
    <string name="weibosdk_demo_toast_obtain_code_failed">获取 Code 失败</string>
    <string name="weibosdk_demo_toast_obtain_token_success">获取 Token 成功</string>
    <string name="weibosdk_demo_toast_obtain_token_failed">获取 Token 失败</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>

</resources>